<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Verbes Français</string>
    <string name="TextView">TextView</string>
    <string name="textview">TextView</string>
    <string name="home">Home</string>
    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="item3">Item3</string>
    <string name="textviews">TextViews</string>
    <string name="textsearch">Search</string>
    <string name="name">Name</string>
    <string name="search" tools:ignore="TypographyEllipsis">Search...</string>
    <string name="close">Close</string>
    <string name="send_email">Send Email</string>
    <string name="share">Share</string>
    <string name="txsearch">Text Search</string>
    <string name="button_conj">Conjugation</string>
    <string name="button_gram">Grammar</string>
    <string name="button_exercise">Exercises</string>
    <string name="search_title">Search...</string>
    <string-array name="web_page">
        <item>"file:///android_asset/html/1.html"</item>
        <item>"file:///android_asset/html/2.html"</item>
        <item>"file:///android_asset/html/3.html"</item>
        <item>"file:///android_asset/html/4.html"</item>
        <item>"file:///android_asset/html/5.html"</item>
    </string-array>
    <string-array name="headings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>