<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <item
        android:id="@+id/item3"
        android:title="@string/item1"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/item2"
        android:title="@string/item2"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />


    <item
        android:id="@+id/item1"
        android:title="@string/item2"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_title"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/home_icon"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />






</menu>