<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorButtonNormal"
    tools:context="com.verbes.drmas.verbesfranais.MainActivity" tools:targetApi="lollipop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <SearchView
                android:id="@+id/SearchView1"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@android:color/white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:queryHint="Search..."
                tools:background="@android:color/white"
                tools:targetApi="o">

            </SearchView>

            <ListView
                android:id="@+id/ListView"
                android:layout_width="match_parent"
                android:layout_height="470dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            tools:layout_editor_absoluteY="486dp">

            <ImageView
                android:id="@+id/img_email"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:contentDescription="@string/send_email"
                android:onClick="img_email"
                app:srcCompat="@drawable/emails" />

            <ImageView
                android:id="@+id/img_share"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:contentDescription="@string/share"
                android:onClick="img_share"
                app:srcCompat="@drawable/share"
                tools:srcCompat="@drawable/share" />

            <ImageView
                android:id="@+id/img_close"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:contentDescription="@string/close"
                android:onClick="img_close"
                app:srcCompat="@drawable/delete" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
