<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="com.verbes.drmas.verbesfranais.home_page">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TableRow
            android:id="@+id/content_con"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-60dp"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/btn_conj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="140dp"
                android:background="@drawable/buttonshapecolor"
                android:onClick="btn_conj"
                android:text="@string/button_conj"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="160dp"
                tools:layout_editor_absoluteY="232dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/btn_cramer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="140dp"
                android:background="@drawable/buttongrammar"
                android:paddingBottom="5dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="5dp"
                android:text="@string/button_gram"
                android:textAllCaps="false"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="148dp"
                tools:layout_editor_absoluteY="232dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/btn_exice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="140dp"
                android:background="@drawable/buttonexercise"
                android:paddingBottom="5dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="5dp"
                android:text="@string/button_exercise"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:topLeftRadius="30dp"
                android:topRightRadius="30dp" />
        </TableRow>


    </TableLayout>



</android.support.constraint.ConstraintLayout>
